[package]
name = "lisp_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
peg = "0.8.1"
rustyline = { version = "11.0.0", features = ["custom-bindings", "derive", "with-fuzzy"] }

[lib]
name = "lisp_repl"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "tests"
path = "tests/tests.rs"
