[package]
name = "lisp_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
# peg = { version = "0.8.1", features = ["trace"] }
peg = { version = "0.8.1", features = [] }
rustyline = { version = "11.0.0", features = ["custom-bindings", "derive", "with-fuzzy"] }

# [features]
# trace = ["peg/trace"]

[lib]
name = "lisp_repl"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "tests"
path = "tests/tests.rs"


[profile.dev]
incremental = false
